[package]
name = "randselect"
version = "0.3.1"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
license = "BlueOak-1.0.0"
description= "Tool for randomly selecting files from a directory."
readme = "README.md"
repository = "https://github.com/lukehsiao/randselect"
homepage = "https://github.com/lukehsiao/randselect"
documentation = "https://docs.rs/randselect"
keywords = ["randselect", "random", "directory", "files"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
human-panic = "1.2.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
thiserror = "1.0.50"

[profile.release]
debug = false
